# conscience_research

./: .gitignore  DEPLOYMENT.md  Dockerfile  EXAMPLES.md  README.md  SD_DFD_PFD.md  agent.py  docker-compose.yml  normative_rules.csv  prod.env.example  production_service.py  program.md  pyproject.toml  scenarios.py  scenarios_third_eye.py
Claude skill/third-eye/: SKILL.md
Claude skill/third-eye/references/: conscience_spec.md
Claude skill/third-eye/scripts/: pull_calibration.py  record_episode.py  show_insights.py
experiments/: conscience_research_learners.ipynb
static/: app.js  index.html  styles.css
