[project]
name = "conscience-research"
version = "0.1.0"
description = "Conscience in AI Agents — autonomous research loop"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
conscience-service = "production_service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
