[project]
name = "conscience-research"
version = "0.1.0"
description = "Conscience in AI Agents — autonomous research loop"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49.0",
    "cryptography>=42.0.0",
]

[project.scripts]
conscience-service = "production_service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
